# OfficePlane

./: .dockerignore  .gitignore  ALL_IN_ONE_README.md  CLAUDE.md  Chapter 4 - AI Ethics Safety and Compliance_mcq 1.docx  DOCKER_README.md  E2E Test Document - Hello World.docx  FEATURES.md  MANAGEMENT_README.md  PROJECT.md  README.md  UI_DESIGN.md  agentic_document_runtime_alfresco_strategy.docx  chat-message.docx  dev.sh  docker-compose.dev.yml  docker-compose.yml  harness.config.sh  package-lock.json  package.json  prod.sh  pyproject.toml  quickstart.sh  run.sh  setup.sh  status.sh
.claude/: settings.json
.claude/agents/: arch-guardian.md  entropy-sweeper.md  security-auditor.md  test-inspector.md  ui-guardian.md
.claude/hooks/: quality-gate.sh  session-start.sh
.githooks/: pre-commit
.github/workflows/: deploy-landing.yml  deploy-pages.yml
.playwright-mcp/: How-to-fill-a-document-on-Platus.docx  To-fill-a-document-on-Platus.docx  To-fill-a-document-on-Platus.md
agent-harness-kit/: CLAUDE.template.md  harness.config.sh
agent-harness-kit/.claude/: settings.json
agent-harness-kit/.githooks/: pre-commit
agent-harness-kit/checks/: __init__.py  __main__.py  domain_terms.py  file_limits.py  layer_deps.py  meta.py  named_args.py  naming_consistency.py  pattern_divergence.py  port_coverage.py  security_patterns.py  test_coverage.py
agent-harness-kit/scripts/: check-all.sh  check-fsd.sh  package-harness.sh  setup-hooks.sh
checks/: __init__.py  __main__.py  file_limits.py  naming_consistency.py  security_patterns.py
docker/: Dockerfile  Dockerfile.allinone  Dockerfile.rust  init.sql  supervisord.conf
docker/migrations/: 001_add_source_file_storage.sql
docs/: agent-teams.md  features.md  file-operation-flow.md  implementation-gaps.md
docs-site/: docusaurus.config.ts  sidebars.ts
docs-site/docs/: overview.md
examples/: chat_workflow_demo.py
landing/: OfficePlane_Deck.pptx  generate_deck.py  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
landing/src/: App.tsx  index.css
native/officeplane-core/: .gitignore  Cargo.toml  README.md  pyproject.toml
native/officeplane-core/src/: error.rs  lib.rs  pool.rs  render.rs  uno.rs
prisma/: schema.prisma
scripts/: build_native.sh  check-all.sh  compare_drivers.sh  e2e_agent_demo.py  load_test.py  setup-hooks.sh
src/officeplane/: config.py
tests/: conftest.py  test.docx  test.pptx  test_action_planning.py  test_author_component.py  test_components.py  test_doctools.py  test_document_import.py  test_driver_comparison.py  test_health.py  test_image_processor.py  test_rag_search.py  test_render_docker.py  test_render_mock_driver.py  test_render_real_pptx.py  test_sheettools.py  test_structure_parser.py  test_task_queue_skill_dispatch.py  test_vision_ingestion.py  test_workchestrator.py
tests/agent/: test_activity_endpoint.py  test_analyze_xlsx.py  test_audit_endpoint.py  test_auto_categorize.py  test_catalog_loaded.py  test_chat_endpoint.py  test_citation_validator.py  test_diff_endpoint.py  test_document_edit_handler.py  test_document_ops.py  test_document_tree.py  test_docx_render.py  test_embedding_provider.py  test_event_dispatcher.py  test_extract_tabular_data.py  test_generate_docx_blocks_handler.py  test_generate_docx_handler.py  test_generate_from_collection.py  test_generate_pdf_handler.py  test_generate_pptx_blocks_handler.py  test_generate_pptx_handler.py  test_generate_xlsx_handler.py  test_image_embed.py  test_jsonlogic.py  test_lifecycle_endpoint.py  test_lineage_api.py  test_model_factory.py  test_model_resolution.py  test_model_tiers.py  test_no_document_instance.py  test_ocr_provider.py  test_pdf_ocr_fallback.py  test_pdf_render.py  test_persistence.py  test_pii_detection.py  test_pipeline_foreach.py  test_pipeline_refs.py  test_pipeline_runner.py  test_populate_xlsx.py  test_pptx_render.py  (+17 more)
tests/api/: test_collection_upload.py  test_collections_routes.py  test_jobs_routes.py  test_skills_routes.py
tests/db/: test_document_summaries.py  test_provenance_models.py
tests/ingestion/: test_deepseek_structure.py  test_summary_emission.py  test_text_extractors.py
ui/: Dockerfile  Dockerfile.dev  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/components/: AgenticChat.tsx  ConfirmDialog.tsx  DocumentStructure.tsx  DocumentsPanel.tsx  FileUploadDialog.tsx  Header.tsx  HistoryPanel.tsx  Sidebar.tsx  (+5 more)
(+384 files in other folders)
