[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "officeplane"
version = "0.1.0"
description = "Enterprise-grade agentic runtime for Office artifacts (render plane v0.1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pymupdf>=1.23.0",
  "prometheus-client>=0.20.0",
  "ujson>=5.9.0",
  # Database
  "prisma>=0.14.0",
  "psycopg[binary]>=3.1.0",
  "asyncpg>=0.29.0",
  # Document processing
  "python-docx>=1.1.0",
  # Vision-based ingestion
  "google-generativeai>=0.7.0",
  "Pillow>=10.0.0",
  # RAG & Embeddings
  "openai>=1.0.0",
  # WebSockets
  "websockets>=12.0",
  # System monitoring
  "psutil>=5.9.0",
  # Content generation agent
  "jinja2>=3.1.0",
  "python-pptx>=0.6.21",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "mypy>=1.1",
]
redis = [
  "redis[hiredis]>=5.0.0",
]
agent = [
  "langgraph>=0.2.0",
  "deepagents==0.5.8",
  "langchain-openai>=0.2.0",
  "litellm==1.83.7",
  "langchain-litellm==0.6.5",
  "cairosvg>=2.7.0",
  "svglib>=0.1.1",
  "reportlab>=4.0.0",
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "playwright>=1.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "fitz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "officeplane_core"
ignore_missing_imports = true
